# airas-20251026-180604-tanaka

./: pyproject.toml
.github/workflows/: run_evaluation_with_claude_code.yml  run_evaluation_with_open_code.yml  run_full_experiment_with_claude_code.yml  run_full_experiment_with_open_code.yml  run_trial_experiment_with_claude_code.yml  run_trial_experiment_with_open_code.yml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/judge_execution_subgraph/: judge_execution.txt
.research/prompt/retrieve_hugging_face_subgraph/: extract_code_in_readme_dataset_0.txt  extract_code_in_readme_model_0.txt
config/: config.yaml
config/run/: comparative-1-Llama-2-Chat-7B-Argilla-DPO-Mix-7k.yaml  proposed-Llama-2-Chat-7B-Argilla-DPO-Mix-7k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
