[project]
name = "td_dpo_experiments"
version = "0.1.0"
description = "Temperature-Decoupled DPO experiments"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "transformers>=4.34.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "bitsandbytes",
    "hydra-core>=1.3.2",
    "wandb>=0.15.12",
    "optuna>=3.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "sentencepiece>=0.1.99",
]